--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firstapp",
+  "name": "simple-app",
   "version": "1.0.0",
   "description": "first app with mercury",
   "main": "index.js",
