--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "first app with mercury",
   "main": "index.js",
   "scripts": {
-    "test": "semistandard && tape './src/**/test.js' | tap-spec"
+    "test": "semistandard && tape './src/**/test.js' | tap-spec",
+    "run": "budo index.js --open --live"
   },
   "author": "Michael Perrotte",
   "license": "GPL-3.0",
   "devDependencies": {
+    "budo": "^8.2.1",
     "semistandard": "^7.0.5",
     "tap-spec": "^4.1.1",
     "tape": "^4.5.1"
